Fix important quote width on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -54,8 +54,7 @@
 }
 
 @media (max-width: 600px) {
-  .floating-section,
-  .important {
+  .floating-section {
     float: none;
     width: 100%;
     margin: 1rem 0;
